3.0.6 -> 3.0.7
	- fix: avoid calling getpass twice as side effect of xstrdup macro
		(katzj@linuxpower.org) (#17672).
	- sync python bindings with rpm4.

3.0.5 -> 3.0.6
	- python bindings to query and verify signatures.
	- add callbacks on package erasure.
	- fix: preserve cpio errno when using Fclose with libio.
	- fix: initialize sigs everywhere in python header object.
	- translate rpm.8 man page (Peter Ivanyi <ivanyi@internet.sk>).
	- popt: support for float/double args.
	- fix: honor --test when doing --freshen.
	- add alpha* architectures.

3.0.4 -> 3.0.5
	- fix: --define and --eval on alpha were broke.
	- configure.in fiddles for BSD systems (Patrick Schoo).
	- solaris2.6: avoid bsearch with empty dir list (Ric Klaren - klaren@cs.utwente.nl)
	- include RPM-GPG-KEY in file manifest.
	- Add ia64 and sparc64 changes. 
	- rpm.spec: add per-platform sub-directories.
	- FreeBSD fixes (bero@redhat.com).
	- handle version 4 packaging as input.
	- builds against bzip2 1.0
	- fix: resurrect symlink unique'ifying property of finger prints.
	- fix: broken glob test with empty build directory (Geoff Keating).
	- fix: create per-platform directories correctly.
	- update brp-* scripts from rpm-4.0, enable in per-platform config.
	- alpha: add -mieee to default optflags.
	- add RPMTAG_OPTFLAGS, configured optflags when package was built.
	- add RPMTAG_DISTURL for rpmfind-like tools (content unknown yet).
	- teach brp-compress about /usr/info and /usr/share/info as well.
	- update macros.in from rpm-4.0 (w/o dbi configuration).
        - fix: don't expand macros in false branch of %if (kasal@suse.cz).
        - fix: macro expansion problem and clean up (#11484) (kasal@suse.cz).
	- uname on i370 has s390 as arch (#11456).
	- python: initdb binding (Dan Burcaw <dburcaw@terraplex.com>).
	- internalize --freshen (Gordon Messmer <yinyang@eburg.com>).
	- support for separate source/binary compression policy.
	- support for bzip payloads.